--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 client/dist/*.js.map
 client/dist/*.js
 node_modules
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+.gitattributes
+.idea/
