--- a/api/build.gradle
+++ b/api/build.gradle
@@ -29,16 +29,18 @@ dependencies {
     // In our simple use case, the logger gets automatically configured by simply existing.
     implementation 'org.slf4j:slf4j-simple:+'
 
+    implementation 'com.google.code.gson:gson:2.8.7'
+
     // Reference the domain subproject.
-    // implementation project(':domain')
+    implementation project(':domain')
 
     // Use JUnit Jupiter API for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     // Also use the Mockito mocking framework to mock simple server functionality.
     testImplementation "org.mockito:mockito-core:2.+"
 
     // Use JUnit Jupiter Engine for testing.
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
 application {
